fix(user.css): fix notifications get covered by playerbar

--- a/src/user.css
+++ b/src/user.css
@@ -1367,6 +1367,12 @@ path[d='M23 0C10.298 0 0 10.297 0 23c0 12.702 10.298 23 23 23 12.703 0 23-10.298
   color: var(--spice-notification-error);
 }
 
+/* notification */
+
+.main-notificationBubbleContainer-NotificationBubbleContainer {
+  margin-bottom: 110px;
+}
+
 /* modals */
 
 .GenericModal__overlay {
